--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,8 +7,7 @@
   /* --first-color: #EFD50C; */
   /* --text-color: #B7B7B7; */
   /* --bg-color: #141313; */
-  --white-color:hsl(0, 0%, 100%);
-  --icon-color: hsl(0, 100%, 50%);
+ 
   /*Fuente y Tipografia*/
   --body-font: "Montserrat", sans-serif;
   --big-font-size: 3rem;
@@ -32,6 +31,8 @@
   --hue: 189;
   --sat: 90%;
   --lig: 46%;
+  --white-color:hsl(0, 0%, 100%);
+  --icon-color: hsl(0, 100%, 50%);
   --bg-color: hsl(0, 5%, 8%);
   --first-color:hsl(12, 100%, 51%);
   --first-color-alt: hsl(207, 12%, 29%); /* -4% */
@@ -52,6 +53,70 @@
   --smaller-font-size: .75rem;
   --big-font-size: 2.5rem;
 }
+
+/*=============== THEME ===============*/
+.change-theme{
+  
+  top: 1.5rem;
+  right: 0;
+  font-size: 1.25rem;
+  color: var(--title-color);
+  cursor: pointer;
+  transition: .3s;
+}
+
+.change-theme:hover{
+  color: var(--first-color);
+}
+
+/*========== Variables Dark theme ==========*/
+body.dark-theme{
+  --hue: 189;
+  --sat: 90%;
+  --lig: 46%;
+  --white-color:hsl(0, 1%, 13%);
+  --icon-color: hsl(0, 2%, 10%);
+  --bg-color: hsl(0, 0%, 100%);
+  --first-color:hsl(0, 3%, 15%);
+  --first-color-alt: hsl(0, 0%, 16%); /* -4% */
+  --title-color: hsl(0, 0%, 7%);
+  --text-color: hsl(0, 0%, 0%);
+  --text-color-light: hsl(145, 60%, 48%);
+  --text-color-lighten: hsl(207, 90%, 61%);
+  --body-color:hsl(0, 0%, 5%);
+  --container-color: hsl(0, 0%, 6%);
+}
+/*========== 
+    Color changes in some parts of 
+    the website, in light theme
+==========*/
+.dark-theme .profile__social-link:hover{
+  color: hsl(var(--hue), var(--sat), 57%);
+}
+.dark-theme .button__gray{
+  background-color: var(--container-color);
+}
+
+.dark-theme .button__gray:hover{
+  background-color: hsl(var(--hue), 25%, 16%);
+}
+
+.dark-theme .filters__content{
+  background-color: var(--container-color);
+}
+
+.dark-theme::-webkit-scrollbar{
+  background-color: hsl(var(--hue), 8%, 16%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb{
+  background-color: hsl(var(--hue), 8%, 24%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb:hover{
+  background-color: hsl(var(--hue), 8%, 32%);
+}
+
 .allboxs{
 
   display: flex;
